[tool.poetry]
name = "hexlet-python-homework1"
version = "0.1.0"
description = "Домашняя работа 1: игра крестики-нолики"
authors = ["Andrei Belskii <mrandrewer@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = "^5.15.11"
funtools = "^0.1.0"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"